app-without-persistents/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-wordpress-mysql-without-persistence
