app-without-persistents/04-deployment-wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-without-persistence
  namespace: demo-wordpress-mysql-without-persistence
  labels:
    app: wordpress-without-persistence
spec:
  selector:
    matchLabels:
      app: wordpress-without-persistence
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-without-persistence
        tier: frontend
    spec:
      serviceAccountName: sa-wordpress-without-persistence
      containers:
      - image: wordpress:php8.0-apache
        name: wordpress-without-persistence
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        emptyDir: {}
